--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,6 @@
-<h1>タスク新規作成ページ</h1>
+<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+    <h1>タスク新規作成ページ</h1>
+</div>
 
 <%= render 'form', task: @task %>
 
