--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,7 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  <div class="row">
+    <%= render 'tasks/tasks', tasks: @tasks %>
+  </div>
 <% else %>
   <div class="center jumbotron">
     <div class="text-center">
