--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <!-- @user add .tasks -->
     <%= form_for(@user) do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
       
